# amigo-oculto

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Dockerfile  QUICK_START.md  README.md  docker-compose.yml  fly.production.toml  fly.staging.toml  fly.toml  litestream.yml  run.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml  promote-to-main.yml  require-stage-merge.yml  scheduled.yml
backend/: .env.example  Cargo.toml  Dockerfile  fly.toml
backend/src/: db.rs  email.rs  main.rs  matching.rs  models.rs  proxy_auth.rs  rate_limiter.rs  routes.rs  server.rs  site_admin_auth.rs  staging_auth.rs  token.rs
backend/src/email_templates/: components.rs  mod.rs  styles.rs
backend/src/email_templates/html/: base.rs  mod.rs  organizer.rs  participant.rs  verification.rs
backend/src/email_templates/plain/: mod.rs  organizer.rs  participant.rs  verification.rs
frontend/: package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
frontend/src/: app.css  app.html
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/admin/[admin_token]/: +page.svelte
frontend/src/routes/jogo/[game_id]/: +page.svelte
frontend/src/routes/privacidade/: +page.svelte
frontend/src/routes/revelar/[view_token]/: +page.svelte
frontend/src/routes/site-admin/: +page.svelte
frontend/src/routes/site-admin/login/: +page.svelte
frontend/src/routes/termos/: +page.svelte
