[package]
name = "amigo-oculto-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lettre = { version = "0.11", default-features = false, features = [
  "tokio1-native-tls",
  "smtp-transport",
  "builder",
  "hostname",
  "tracing",
] }
ulid = { version = "1.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde", "unstable-locales"] }
anyhow = "1.0"
thiserror = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
url = "2.5.7"
maud = "0.26"